# frs-manager

./: .gitignore  Cargo.toml  Makefile  README.md  data.json  package.json  pnpm-lock.yaml
.github/workflows/: rust.yml
src/: commands.rs  installer.rs  main.rs  models.rs  uninstaller.rs  utils.rs
src/commands/: uninstall.rs  update.rs
src/files/fivem/esx/: serverFunctions.ts
src/files/fivem/universal/: fxmanifest.ts
src/handlers/: bundle.ts
src/utils/: data.ts  types.ts
