[package]
name = "frs-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
winreg = "0.52.0"

[[bin]]
name = "frs"
path = "src/main.rs"

[[bin]]
name = "installer"
path = "src/installer.rs"
