[package]
name = "frs-manager"
version = "1.0.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
houdini = "2.0.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "frs"
path = "src/main.rs"

[[bin]]
name = "installer"
path = "src/installer.rs"

[[bin]]
name = "uninstaller"
path = "src/uninstaller.rs"
